--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "zero",
+  "name": "Viav.js",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://viavbot.org/",
+  "homepage": "http://viav.js.org/",
   "devDependencies": {
     "gh-pages": "^1.1.0"
   },
